Add all major keys.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
           <button type="button" class="btn btn-default">D Major</button>
           <button type="button" class="btn btn-default">A Major</button>
           <button type="button" class="btn btn-default">E Major</button>
+          <button type="button" class="btn btn-default">B Major</button>
+          <button type="button" class="btn btn-default">F# Major</button>
+          <button type="button" class="btn btn-default">Db Major</button>
+          <button type="button" class="btn btn-default">Ab Major</button>
+          <button type="button" class="btn btn-default">Eb Major</button>
+          <button type="button" class="btn btn-default">Bb Major</button>
+          <button type="button" class="btn btn-default">F Major</button>
         </div>
       </div>
       <div class="col-md-12">
