Add minor keys.

--- a/index.html
+++ b/index.html
@@ -25,19 +25,33 @@
       <div class="col-md-12">
         <h2>Key</h2>
         <div id="key-val">C Major</div>
-        <div class="btn-group" id="key-buttons" role="group" aria-label="Keys">
+        <div class="btn-group key-buttons" role="group" aria-label="Keys">
           <button type="button" class="btn btn-default">C Major</button>
           <button type="button" class="btn btn-default">G Major</button>
           <button type="button" class="btn btn-default">D Major</button>
           <button type="button" class="btn btn-default">A Major</button>
           <button type="button" class="btn btn-default">E Major</button>
           <button type="button" class="btn btn-default">B Major</button>
-          <button type="button" class="btn btn-default">F# Major</button>
-          <button type="button" class="btn btn-default">Db Major</button>
+          <button type="button" class="btn btn-default">F#/Gb Major</button>
+          <button type="button" class="btn btn-default">C#/Db Major</button>
           <button type="button" class="btn btn-default">Ab Major</button>
           <button type="button" class="btn btn-default">Eb Major</button>
           <button type="button" class="btn btn-default">Bb Major</button>
           <button type="button" class="btn btn-default">F Major</button>
+        </div>
+        <div class="btn-group key-buttons" role="group" aria-label="Keys">
+          <button type="button" class="btn btn-default">A Minor</button>
+          <button type="button" class="btn btn-default">E Minor</button>
+          <button type="button" class="btn btn-default">B Minor</button>
+          <button type="button" class="btn btn-default">F# Minor</button>
+          <button type="button" class="btn btn-default">C# Minor</button>
+          <button type="button" class="btn btn-default">G#/Ab Minor</button>
+          <button type="button" class="btn btn-default">D#/Eb Minor</button>
+          <button type="button" class="btn btn-default">Bb Minor</button>
+          <button type="button" class="btn btn-default">F Minor</button>
+          <button type="button" class="btn btn-default">C Minor</button>
+          <button type="button" class="btn btn-default">G Minor</button>
+          <button type="button" class="btn btn-default">D Minor</button>
         </div>
       </div>
       <div class="col-md-12">
