--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
           <button type="button" class="btn btn-default">F Major</button>
         </div>
         <div class="btn-group key-buttons" role="group" aria-label="Keys">
-          <button type="button" class="btn btn-default">A Minor</button>
-          <button type="button" class="btn btn-default">E Minor</button>
-          <button type="button" class="btn btn-default">B Minor</button>
-          <button type="button" class="btn btn-default">F# Minor</button>
-          <button type="button" class="btn btn-default">C# Minor</button>
-          <button type="button" class="btn btn-default">G#/Ab Minor</button>
-          <button type="button" class="btn btn-default">D#/Eb Minor</button>
-          <button type="button" class="btn btn-default">Bb Minor</button>
-          <button type="button" class="btn btn-default">F Minor</button>
-          <button type="button" class="btn btn-default">C Minor</button>
-          <button type="button" class="btn btn-default">G Minor</button>
-          <button type="button" class="btn btn-default">D Minor</button>
+          <button type="button" class="btn btn-default">a minor</button>
+          <button type="button" class="btn btn-default">e minor</button>
+          <button type="button" class="btn btn-default">b minor</button>
+          <button type="button" class="btn btn-default">f# minor</button>
+          <button type="button" class="btn btn-default">c# minor</button>
+          <button type="button" class="btn btn-default">g#/ab minor</button>
+          <button type="button" class="btn btn-default">d#/eb minor</button>
+          <button type="button" class="btn btn-default">bb minor</button>
+          <button type="button" class="btn btn-default">f minor</button>
+          <button type="button" class="btn btn-default">c minor</button>
+          <button type="button" class="btn btn-default">g minor</button>
+          <button type="button" class="btn btn-default">d minor</button>
         </div>
       </div>
       <div class="col-md-12">
