Add harmonic minors.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
           <button type="button" class="btn btn-default">g minor</button>
           <button type="button" class="btn btn-default">d minor</button>
         </div>
+        <div class="btn-group key-buttons" role="group" aria-label="Keys">
+          <button type="button" class="btn btn-default">a harmonic minor</button>
+          <button type="button" class="btn btn-default">e harmonic minor</button>
+          <button type="button" class="btn btn-default">b harmonic minor</button>
+          <button type="button" class="btn btn-default">f# harmonic minor</button>
+          <button type="button" class="btn btn-default">c# harmonic minor</button>
+          <button type="button" class="btn btn-default">g#/ab harmonic minor</button>
+          <button type="button" class="btn btn-default">d#/eb harmonic minor</button>
+          <button type="button" class="btn btn-default">bb harmonic minor</button>
+          <button type="button" class="btn btn-default">f harmonic minor</button>
+          <button type="button" class="btn btn-default">c harmonic minor</button>
+          <button type="button" class="btn btn-default">g harmonic minor</button>
+          <button type="button" class="btn btn-default">d harmonic minor</button>
+        </div>
       </div>
       <div class="col-md-12">
         <h2>Notes Played</h2>
